# FastAPI-SearchEngine

./: docker-compose.yml  init.sql  nginx.conf
crawler/: config.py  main.py  pyproject.toml
crawler/src/: crawler.py  parser.py  print.py
extractor/: Dockerfile  main.py  pyproject.toml
