[project]
name = "extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "Max-65",email = "macsim.bazdyrev@gmail.com"}
]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"